syntax = "proto3"; // 协议版本
 
package com.github.xhrg.grpc.client2;
// 选项配置
option java_multiple_files = false;
//生成位置
option java_package = "com.github.xhrg.grpc.client";
option java_outer_classname = "SimpleProto";
 
service Simple {
  // 简单gRPC
  rpc OneToOne (MyRequest) returns (MyResponse) {
  }
}
 
message MyRequest {
  string name = 1;
 
  int32 value = 2;
}
 
message MyResponse {
  string message = 1;
 
  int64 result = 2;
}